修复红色竞赛，清理多余文件并做好适配，已验证运行，所有功能正确（稳定版）

--- a/main_code/spider/resource/list/修复清单.md
+++ b/main_code/spider/resource/list/修复清单.md
@@ -9,7 +9,7 @@
   - `package/login.py` (登录函数)
   - `long_run/long_run.py` (长征跑模块)
   - `red_run/red_run.py` (红色跑模块)
-  - `package/query_spider.py` (查询模块)
+  - `package/data/query_spider.py` (查询模块)
 - **修复建议**: 
   - 统一会话管理接口，确保登录函数返回完整的session对象
   - 为每个账号创建独立的session，并在使用后正确清理
@@ -128,6 +128,5 @@
   - 统一异常处理机制
   - 实现自定义异常类
   - 添加详细的错误日志和恢复机制
-
 
 
